add class6 demo

--- a/class-06/demo/index.html
+++ b/class-06/demo/index.html
@@ -11,6 +11,12 @@
         </header>
         <main>
             <h1>This is the Main Page</h1>
+            <ul id="movies">
+
+            </ul>
+            <ul id="children">
+
+            </ul>
         </main>
         <footer>
 
