--- a/class-12/demo/index.html
+++ b/class-12/demo/index.html
@@ -14,8 +14,10 @@
                 <img id="picture1" alt="" title="" src="">
                 <img id="picture2" alt="" title="" src="">
             </section>
+            <canvas id="my_data"></canvas>
         </main>
         <footer></footer>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
